--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-version: '3.1'
+version: "3.1"
 
 services:
     db:
         image: postgres:15
         container_name: postgres
         ports:
-          - 5432:5432
+            - 5432:5432
         volumes:
-          - db-store:/var/lib/postgresql
+            - db-store:/var/lib/postgresql
         environment:
-          - POSTGRES_PASSWORD: root
+            - POSTGRES_PASSWORD=root
 
-    volumes:
-        db-store:
-
-
-        
+volumes:
+    db-store:
