--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.1"
+version: "3"
 
 services:
     db:
@@ -7,7 +7,8 @@ services:
         ports:
             - 5432:5432
         volumes:
-            - db-store:/var/lib/postgresql
+            - db-store:/var/lib/postgresql/data
+            - ./script:/docker-entrypoint-initdb.d
         environment:
             - POSTGRES_PASSWORD=root
 
