--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
     db:
-        image: postgres:15
+        image: postgis/postgis:15-3.3
         container_name: postgres
         ports:
             - 5432:5432
